// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`newEqroContractStateEmail > renders email for new EQRO contract NOT subject to review as expected 1`] = `
"<h3 style="font-size: 22px; font-weight: 400; line-height: normal"">Based on the state's responses, MCR-MN-0004-SNBC is not subject to CMS review and approval.<div><br />

<b>Contract type</b>: External Quality Review Organization (EQRO)<br />
<b>Contract action type</b>: Amendment to base contract<br />
<b>Contract amendment effective dates</b>: 12/31/2023 to 12/31/2024<br />
<b>Managed care entities reviewed by this EQRO</b>: Managed Care Organization (MCO), Primary Care Case Management Entity (PCCM Entity)<br />
<br />
<b>Submission description</b>: A EQRO submission<br />
<br />
<a href="http://localhost/submissions/eqro/test-contract-123">View submission</a>
<br /><br />
<span style="margin-bottom: 0; padding-bottom: 0;">Although the state's responses indicate this submission is not subject to CMS review and approval, all contracts with EQROs must:</span>
<ul style="margin-left: 0; padding-left: 0; margin-top: 0;">
  <li>Be submitted to CMS. This includes base contracts, amendments to base contracts, and extensions.</li>
  <li>Meet competence and independence requirements specified at 42 CFR 438.354 to qualify for Federal Financial Participation (FFP).</li>
  <li>Require the mandatory review activities specified at 42 CFR 438.358 for MCOs, PIHPs, and PAHPs.</li>
</ul>
<span style="margin-bottom: 0; padding-bottom: 0;">If you need assistance or have any questions:</span>
<ul style="margin-left: 0; padding-left: 0; margin-top: 0;">
  <li>For assistance with programmatic, contractual, or operational issues, please reach out to <a href="mailto:MCGDMCOactions@cms.hhs.gov">MCGDMCOactions@cms.hhs.gov</a> and/or your CMS primary contact.</li>
  <li>For issues related to MC-Review or all other inquiries, please reach out to <a href="mailto:MC_Review_HelpDesk@cms.hhs.gov">MC_Review_HelpDesk@cms.hhs.gov.</a></li>
</ul>
"
`;

exports[`newEqroContractStateEmail > renders email for new EQRO contract subject to review as expected 1`] = `
"<h3 style="font-size: 22px; font-weight: 400; line-height: normal"">Based on the state's responses, MCR-MN-0004-SNBC is subject to CMS review and approval.<div><br />

<b>Contract type</b>: External Quality Review Organization (EQRO)<br />
<b>Contract action type</b>: Amendment to base contract<br />
<b>Contract amendment effective dates</b>: 12/31/2023 to 12/31/2024<br />
<b>Managed care entities reviewed by this EQRO</b>: Managed Care Organization (MCO), Primary Care Case Management Entity (PCCM Entity)<br />
<br />
<b>Submission description</b>: A EQRO submission<br />
<br />
<a href="http://localhost/submissions/eqro/test-contract-123">View submission</a>
<br /><br />
<span style="margin-bottom: 0; padding-bottom: 0;">What comes next:</span>
<ol style="list-style: none; padding-left: 0; margin-left: 0; margin-top: 0;">
  <li><b>1. Check for completeness</b>: CMS will review all documentation submitted to ensure all required materials were received, and the state submission history is complete.</li>
  <li><b>2. CMS review</b>: Your submission will be reviewed by CMS for adherence to federal regulations.</li>
  <li><b>3. Questions</b>: You may receive questions via email from CMS as they conduct their review.</li>
  <li><b>4. Determination</b>: Once all questions have been addressed, CMS will contact you with their final determination.</li>
</ol>
<span style="margin-bottom: 0; padding-bottom: 0;">If you need assistance or have any questions:</span>
<ul style="margin-left: 0; padding-left: 0; margin-top: 0;">
  <li>For assistance with programmatic, contractual, or operational issues, please reach out to <a href="mailto:MCGDMCOactions@cms.hhs.gov">MCGDMCOactions@cms.hhs.gov</a> and/or your CMS primary contact.</li>
  <li>For issues related to MC-Review or all other inquiries, please reach out to <a href="mailto:MC_Review_HelpDesk@cms.hhs.gov">MC_Review_HelpDesk@cms.hhs.gov.</a></li>
</ul>
"
`;
